# apple-pick

./: README.md  install-apple-picking.sh
src/realsense-ros/realsense2_camera/launch/: rs_camera.launch
src/ros_deep_learning/: CMakeLists.txt
src/ros_deep_learning/include/: node_detectnet.h
src/ros_deep_learning/launch/: detect.launch  detect_object.launch
src/ros_deep_learning/src/: deep_learning_node.cpp  image_converter.cpp  node_detectnet.cpp
